[package]
name = "td_rredis"
version = "0.1.2"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "redis wrapper for Rust, support cluster"
repository = "https://github.com/tickbh/td_rredis"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["redis", "cluster"]

[dependencies]
url = "0.5.4"
sha1 = "0.1.1"

